# ai-building-designer

./: .gitignore  README.md  pyproject.toml
docs/: STORY.md
examples/: simple_house.py
projects/3apt-corner-core/: building.json
projects/4apt-centered-core/: building.json
src/archicad_builder/: __init__.py  __main__.py
src/archicad_builder/cli/: main.py
src/archicad_builder/export/: __init__.py  floorplan.py  ifc.py  overview.py
src/archicad_builder/generators/: __init__.py  apartments.py  building_4apt.py  core.py  corridor.py  shell.py  template.py
src/archicad_builder/models/: __init__.py  building.py  elements.py  geometry.py  ifc_id.py  spaces.py
src/archicad_builder/queries/: __init__.py  connectivity.py  mermaid.py  slice.py  spatial.py  wall_rooms.py
src/archicad_builder/validators/: __init__.py  building.py  codes.py  connectivity.py  phases.py  reachability.py  snap.py  spaces.py  structural.py
src/archicad_builder/vision/: __init__.py  corrections.py  prompt.py
tests/: test_building_api.py  test_building_v2.py  test_building_v3.py  test_building_validators.py  test_cli.py  test_codes.py  test_connectivity.py  test_e049_connectivity.py  test_end_to_end.py  test_export.py  test_generators.py  test_geometry.py  test_ifc_staircase.py  test_models.py  test_professional_rules.py  test_queries.py  test_reasoning_tools.py  test_spaces.py  test_validators.py  test_vision_corrections.py  test_vision_prompt.py
