[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archicad-builder"
version = "0.1.0"
description = "Collaborative building design → IFC export for ArchiCAD"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "ifcopenshell>=0.8",
    "numpy>=1.24",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
archicad-builder = "archicad_builder.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/archicad_builder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
